# DancenotationMCP

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PR_AUTOMATION.md  architecture.md  labanwriter_parity_audit.md
examples/: sample_diagnostics.json  sample_phrase_plan.json  sample_prompts.md  sample_score.ir.json
fixtures/: golden_official_family_score.json  invalid_overlap_timing.json  valid_minimal_score.json
resources/symbol_catalog/: actions.json  directions.json  official_extras.json  qualities.json  support.json  timing.json
schemas/: notation-ir.schema.json
scripts/: check_conflicts_local.sh  codex_full_auto.ps1  pr_auto.ps1
src/dancenotation_mcp/: __init__.py
src/dancenotation_mcp/ir/: catalog.py  models.py
src/dancenotation_mcp/mcp_server/: server.py
src/dancenotation_mcp/planning/: phrase_parser.py  phrase_to_ir.py
src/dancenotation_mcp/rendering/: pdf_renderer.py  svg_renderer.py
src/dancenotation_mcp/validation/: validator.py
tests/: test_catalog_constraints.py  test_mcp_server.py  test_pdf_renderer.py  test_pipeline.py
